--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "js-cookie": "^3.0.5",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
