style: eslint + prettier with google format

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,11 @@
 {
-  "extends": ["next/core-web-vitals", "google"],
+  "extends": ["next/core-web-vitals", "google", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
+    "prettier/prettier": "error",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "new-cap": "off",
-    "object-curly-spacing": "off",
-    "indent": "off",
-    "max-len": "off",
-    "space-before-function-paren": "off",
-    "operator-linebreak": "off"
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
